tests/errors/badcall.slpx
(putln "Starting test...")


(nonexistent 1 2 3)

(putln "Done")

